Bug 1649628 - Make history.length return 1 if session history is unavailable. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D82341